--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         </nav>
             <div class="social-icons">
                 <a href="https://wa.link/phy04r"><i class="fa-brands fa-square-whatsapp"></i></i></a>
-                <a href="https://x.com/BenpolTm?t=oxpqwFsCT23KCIZfdEbgHQ&s=09"><i class="fa-brands fa-twitter"></i></i></a>
+                <a href="https://x.com/BenpolTm?t=oxpqwFsCT23KCIZfdEbgHQ&s=09"><i class="fa-brands fa-twitter"></i><a>
                 <a href="https://www.linkedin.com/in/benjamin-paul-5a874b267?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></i></a>
             </div>
         <div class="header-text">
             <h1>Hi I'm <br><SPan>Benjamin</SPan> from Kenya</h1>
             <p>software engineer and UX/UI designer.</p>
+<div class="CV"><a href="my-cv.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a></div>
 </div>
         </div>
         </div>
@@ -46,7 +47,7 @@
                     <h1 class="sub-title">About Me</h1><p>
                          hey!👋 there... <b> I'm  Benjamin, a software engineer with pasion for <br>
                          front-end development, UI/UX design. </b><br>
-                    I have an extensive experience in HTML,CSS Javascript, and React.js. <br>
+                    I have an extensive experience in HTML,CSS Javascript(ES6), and React.js. <br>
                      I'm also skilled in other front-end technologies such as TypeScript and Next.js. <br>
                     I'm passionate about creating user-friendly and visualy appealing interfaces. I have<br>
                     deep understanding of user experience design principles and I use this knowledge to <br>
@@ -148,11 +149,11 @@
                     </div>
                 </div>
        <div class="work">
-        <img src="construction.jpg" width="200" height="250">
+        <img src="victorians.jpg" width="200" height="250">
         <div class="layer">
             <h3>Citypraise Builders</h3>
             <p>Profesional engineers and contractors aquires clients through this application</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://city-praisebuilders.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="work">
@@ -197,7 +198,7 @@
                                 <textarea name="Message" rows="6" placeholder="Your message" required></textarea>
                                 <button type="submit" class="btn btn2">Submit</button>
                             </form>
-                            <span id="msg">hello</span>
+                            <span id="msg"></span>
                         </div>
                         </div>
                     </div>
