--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h1 class="sub-title">About Me</h1><p>
                          hey!👋 there... <b> I'm  Benjamin, a software engineer with pasion for <br>
                          front-end development, UI/UX design. </b><br>
-                    I have an extensive experience in HTML,CSS Javascript(ES6), and React.js. <br>
+                    I have an extensive experience in HTML5,CSS Javascript(ES6), and React.js. <br>
                      I'm also skilled in other front-end technologies such as TypeScript and Next.js. <br>
                     I'm passionate about creating user-friendly and visualy appealing interfaces. I have<br>
                     deep understanding of user experience design principles and I use this knowledge to <br>
@@ -176,6 +176,23 @@
      <a href="#" class="btn">See more</a>
     </div>
     </div>
+    <section id="skills2">
+        <div>
+            <h3>Skills and Tools</h3>
+            <p>As a seasoned front-end developer, I leverage  these frameworks, tools and languages  to create websites and applications that drive business value and delight users. </p>
+            <div class="tools">
+                <img src="images/react js.jpg" alt=""> 
+                <img src="images/bootstrap 2.jpg" alt="">
+                <img src="images/typescript.jpg" alt="">
+                <img src="images/next js.jpg" alt="">
+                <img src="images/javascript.jpg" alt="">
+                <img src="images/css.jpg" alt="">
+                <img src="images/html.jpg" alt="">
+                <img src="images/git &github.jpg" alt="">
+            </div>
+        </div>
+
+    </section>
 <!---------------------contact---------------------->
                    <div id="contact">
                     <div class="container">
