--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <a href="https://instagram.com/myahund?igshid=NzZlODBkYWE4Ng=="><i class="fa-brands fa-square-instagram"></i></a>
                             <a href="kyalopaul120@gmail.com"><i class="fa-regular fa-envelope"></i></a>        
                             </div>
-                            <a href="images/Benjamin kyalo-RESUME - Shortcut.lnk" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
+                            <a href="images/benjamin-kyalo-CV.pdf.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
                         </div>
                         <div class="contact-right"></div>
                         <form>
