--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="animated-text">
                 <span></span>
                </div>
-<div class="CV"><a href="images/benjamin-kyalo-CV.pdf" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a></div>
+<div class="CV"><a href="images/dev-benjamin-CV.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a></div>
 </div>
         </div>
         </div>
@@ -84,8 +84,8 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2022-current</span> <br> Developed several webs</li>
                             <li><span>Art Crafters</span> <br>Dozens of Websites <br> with diffrent  amaizing visuals <br>and fuctionality. </li>
+                            <li><span>2022-current</span> <br> Developed several webs</li>
                             
                         </ul>
                     </div>
@@ -213,7 +213,7 @@
                             <a href="https://instagram.com/myahund?igshid=NzZlODBkYWE4Ng=="><i class="fa-brands fa-square-instagram"></i></a>
                             <a href="kyalopaul120@gmail.com"><i class="fa-regular fa-envelope"></i></a>        
                             </div>
-                            <a href="images/benjamin-kyalo-CV.pdf.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
+                            <a href="images/dev-benjamin-CV.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
                         </div>
                         <div class="contact-right"></div>
                         <form>
