--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
         <div id="header">
         <div class="container">
         <nav>
-        <div class="benjamin">{ Benjamin }</div>
+            <div class="benjamin">{ Benjamin }</div>
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">services</a></li><li>
                 <li><a href="#portfolio">Portfolio</a></li>
              <li><a href="#contact">contact</a></li>
+                
              <i class="bi bi-brightness-high-fill" id="toggleDark"></i>
              <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
             <i class="fas fa-bars" onclick="openmenu()"></i>
+            <div class="benjamin1">{ Benjamin }</div>
         </nav>
             <div class="social-icons">
                 <a href="https://wa.link/phy04r"><i class="fa-brands fa-whatsapp"></i></i></i></a>
@@ -148,10 +150,10 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="solar vortex.jpeg" width="100%" height="250">
+                    <img src="allwork.png" width="100%" height="250">
                     <div class="layer">
-                        <h3>The solar vortex</h3>
-                        <p>A site where scientist and space enthusiasts connect</p>
+                        <h3>Dozens of work/h3>
+                        <p>Collection of my cool built websites that have solidfied my skills. </p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -173,7 +175,7 @@
 
     </div>
      </div>
-     <a href="#" class="btn">See more</a>
+     <a href="https://benjaminkyalo.github.io/work.github.io/" class="btn">See more</a>
     </div>
     </div>
     <section id="skills2">
