--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="layer">
                         <h3>Dozens of work/h3>
                         <p>Collection of my cool built websites that have solidfied my skills. </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://benjaminkyalo.github.io/work.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
        <div class="work">
@@ -168,9 +168,9 @@
     <div class="work">
         <img src="farming.jpeg" width="100%" height="250">
         <div class="layer">
-            <h3>My Farmer</h3>
-            <p>Farming is a global backbone, more tech should be put in it check out here</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>Images serch engine</h3>
+            <p>Its an application that is built using javascript, react.js and unsplash APIs.</p>
+            <a href="https://benjaminkyalo.github.io/imagessearchapp.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
 
     </div>
