--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
     </div>
     <div class="work">
-        <img src="farming.jpeg" width="100%" height="250">
+        <img src="search engine.png" width="100%" height="250">
         <div class="layer">
             <h3>Images serch engine</h3>
             <p>Its an application that is built using javascript, react.js and unsplash APIs.</p>
