--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                     </div>
                 </div>
        <div class="work">
-        <img src="victorians.jpg" width="100%" height="250">
+        <img src="iqra.png" width="100%" height="250">
         <div class="layer">
-            <h3>Citypraise Builders</h3>
-            <p>Profesional engineers and contractors aquires clients through this application</p>
-            <a href="https://city-praisebuilders.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <h3>IQRA-Driving Academy</h3>
+            <p>IQRA-Driving Academy is a user-friendly website crafted using react.js and Nextjs without necessarily introducing backend part</p>
+            <a href="https://benjaminkyalo.github.io/iQRA-driving.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
     </div>
     <div class="work">
