--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="animated-text">
                 <span></span>
                </div>
-<div class="CV"><a href="images/dev-benjamin-CV.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a></div>
+<div class="CV"><a href="dev-benjamin-CV - Copy - Copy.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a></div>
 </div>
         </div>
         </div>
@@ -216,7 +216,7 @@
                             <a href="https://instagram.com/myahund?igshid=NzZlODBkYWE4Ng=="><i class="fa-brands fa-square-instagram"></i></a>
                             <a href="kyalopaul120@gmail.com"><i class="fa-regular fa-envelope"></i></a>        
                             </div>
-                            <a href="images/dev-benjamin-CV.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
+                            <a href="dev-benjamin-CV - Copy - Copy.docx" download class="btn btn2">Download CV <i class="fa-solid fa-cloud-arrow-down"></i></a>
                         </div>
                         <div class="contact-right"></div>
                         <form>
